--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
         },
         "CHANNELS": {
             "description": "Username or ID of channel or group. Separate multiple IDs by space.",
-"value":"-1001867538832"
+"value":"-1001867538832",
             "required": false
         },
         "ADMINS": {
