--- a/app.json
+++ b/app.json
@@ -60,6 +60,7 @@
         },
         "AUTH_CHANNEL": {
             "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
+"value":"-1001821560097",
             "required": false
         },
         "DATABASE_URI": {
